# webbapp-langgraph

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
ai-engine/: .dockerignore  Dockerfile  pyproject.toml
ai-engine/app/: client.py  main.py  settings.py
ai-engine/app/graph/: build.py  llm.py  nodes.py  state.py
ai-engine/app/streaming/: events.py
ai-engine/app/tools/: dotnet_tools.py
ai-engine/tests/: test_streaming.py  test_workflow_us1.py
backend/: .dockerignore  .editorconfig  Directory.Build.props  Dockerfile  SalesInvoice.slnx
backend/src/SalesInvoice.Api/: Program.cs  SalesInvoice.Api.csproj  SalesInvoice.Api.http  appsettings.Development.json
backend/src/SalesInvoice.Application/: SalesInvoice.Application.csproj
backend/src/SalesInvoice.Infrastructure/: SalesInvoice.Infrastructure.csproj
backend/tests/: Directory.Build.props
backend/tests/SalesInvoice.IntegrationTests/: ApprovalTests.cs  EdgeCaseTests.cs  RecommendationTests.cs  SeederTests.cs  StreamTests.cs  (+2 more)
design-system/ai-sales-invoice-poc/: MASTER.md
frontend/: .dockerignore  .eslintrc.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/src/: App.tsx  index.css
perf/: smoke.js
specs/001-ai-sales-invoice-poc/: data-model.md  plan.md  quickstart.md  research.md  security-review.md  spec.md  tasks.md
(+65 files in other folders)
